2011-02-15  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Confirm validity of a format string before
	updating the function formatting a tweet.
	(twittering-update-status-format): update the function only if the
	given format string is valid.

2011-02-13  Tadashi MATSUO  <tad@mymail.twin.jp>

	* test/test-twittering-mode.el (test-hmac-sha1): Fix a typo.

	* twittering-mode.el: Rearrange internal representation of a
	retweet.
	(twittering-add-statuses-to-timeline-data): use `retweeted-id'
	instead of `source-id'.
	(twittering-normalize-raw-status): rearrange internal
	representation of a retweet. The information as a tweet posted by
	the retweeter is stored with keys prefixed with `retweeting-'. The
	information as a tweet posted by the original author is stored
	with keys prefixed with `retweeted-'. Keys prefixed with
	`original-' or `source-' are obsolete.
	(twittering-make-common-properties): use `retweeted-id' instead of
	`source-id'.
	(twittering-get-common-properties): likewise.
	(twittering-generate-format-table): use
	`retweeting-user-screen-name' instead of
	`original-user-screen-name'.
	(twittering-generate-formater-for-first-spec): use `retweeted-id'
	instead of `source-id'.
	(twittering-render-timeline): likewise.
	(twittering-native-retweet): likewise.

	* twittering-mode.el: `created_at' for an official retweet means
	when the original tweet was posted instead of when it was
	retweeted.
	(twittering-normalize-raw-status): do not override
	`created_at'. The key `created_at' in an alist representing a
	retweet means when the original tweet was posted.

	* twittering-mode.el: When `twittering-follow' is invoked on an
	official retweet, ask a subject.
	(twittering-follow): ask a subject when this function is invoked
	on an official retweet.

	* twittering-mode.el: Add a function to report a user as a spammer.
	(twittering-call-api): support a new command
	`block-and-report-as-spammer'.
	(twittering-block-and-report-as-spammer): new function.