@@ -146,6 +146,12 @@
   `~/.twittering-mode-icons.gz'ですが`twittering-icon-storage-file'と
   いう変数で変更できます。あるバージョンのEmacsで生成したアイコン保存
   ファイルは別のバージョンでは使えない恐れがあるので注意してください。
+* 新しい書式指定子"%RT{...}"
+  `twittering-status-format'で使える書式指定子として"%RT{...}"が追加さ
+  れました。これは対象となるtweetが公式RTのときだけ描画されます。括弧
+  の中には任意の文字列と書式指定子を入れることができ、括弧内の書式指定
+  子はRTされたtweetではなくそのRT自身の情報を使って描画されます。例え
+  ば、"%RT{%s}"はRTしたユーザのscreen_nameとなります。
 * ...
 
 ### バグ修正
